# Test

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  results.xlsx  run_experiments.py
env_test/: pyvenv.cfg
env_test/Scripts/: activate  activate.bat
marca/: __init__.py
marca/associative_classifier/: __init__.py  _associative_classifier.py  _cba.py  _marca.py
marca/classifier/: __init__.py  _classifier.py  _ordinal.py  _probability.py  _rankbased.py  _voting.py
marca/data_structures/: __init__.py  _car.py  _cars.py
marca/datasets/: __init__.py
marca/extract/: __init__.py  _apriori.py  _apriori_c.py  _apriori_t.py  _extract.py  _msapriori.py  _msapriori_partitioned.py
marca/feature_selection/: __init__.py  ensemble.py  information_gain.py  relieff.py
marca/interest_measures/: __init__.py  _acronym.py  _equations.py  _interest_measures.py  _interest_measures_groups.py
marca/interest_measures_selection/: __init__.py
marca/pipeline/: __init__.py  _builder.py  _pipeline.py
marca/prune/: __init__.py  _coverage.py  _dynamic.py  _gcn.py  _iterative.py  _l3.py  _m1.py  _overlap.py  _prune.py  _without.py
marca/rank/: __init__.py  _best_rule.py  _borda.py  _bouker.py  _btl.py  _cba.py  _electre.py  _interest_measure.py  _rank.py  _similarity.py  _topsis.py  _vikor.py  _without.py  _wsm_wpm.py
marca/report/: __init__.py  _report.py
presets/interest_measures_groups/: __init__.py  _interest_measures_groups.json  _preset_interest_measures_groups.py
presets/pipelines/: __init__.py  _preset_pipelines.py
presets/pipelines/data/: cba.py  (+6 more)
(+1 files in other folders)
